Updating the view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="8dp"
         android:text="City name:"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_get_service" />
 
@@ -37,6 +38,7 @@
         android:layout_marginTop="4dp"
         android:text="State:"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_lbl_name" />
 
@@ -48,6 +50,7 @@
         android:layout_marginTop="4dp"
         android:text="Country:"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_lbl_state" />
 
@@ -77,4 +80,17 @@
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/tv_lbl_country"
         app:layout_constraintTop_toBottomOf="@+id/tv_state" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/btn_get_service" />
 </android.support.constraint.ConstraintLayout>
